Actualizacion Nuevos Productos
Nuevos Productos y Categoria Accesorios

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
         <a class="nav-link" href="#" data-categoria="Skincare">🥰 Skincare</a>
       </li>
 
+      <!-- Accesorios -->
+      <li class="nav-item">
+        <a class="nav-link" href="#" data-categoria="Accesorios">🥰 Accesorios</a>
+      </li>
+
     </ul>
   </div>
 </nav>
