--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <!-- Rostro -->
       <li class="nav-item">
-        <a class="nav-link" href="#" data-categoria="Rostro">🧞‍♀️ Rostro</a>
+        <a class="nav-link" href="#" data-categoria="Rostro">😶 Rostro</a>
       </li>
 
       <!-- Skincare -->
@@ -79,7 +79,7 @@
 
       <!-- Accesorios -->
       <li class="nav-item">
-        <a class="nav-link" href="#" data-categoria="Accesorios">🥰 Accesorios</a>
+        <a class="nav-link" href="#" data-categoria="Accesorios">🎀 Accesorios</a>
       </li>
 
     </ul>
