--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
   <div class="announcement-bar">
     <div class="marquee">
       <span>Todos nuestros productos aplican en UNIDADES</span>
-      <span>Lleva productos con precio MAYORISTA a partir de 5 unidades de la misma referencia</span>
+      <span>Lleva productos con precio MAYORISTA a partir de 2 unidades de la misma referencia</span>
       <span>¡Nueva colección disponible!</span>
-      <span>Pago Contra Entrega en Bogotá</span>
-      <span>Monto mínimo $300.000</span>
-      <span>Descuento 3% en compras mayores a $3.000.000</span>
+      <span>Abre tu cajita con  $5000 en nuestro Live en TikTok</span>
+      <span>Envios a Nivel Nacional</span>
       <span>¡Nueva colección disponible!</span>
       <span>Envío gratis en pedidos superiores a $500.000</span>
     </div>
