--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#ff69b4">
   <title>Dali Cosmetics - Inicio</title>
+  <link href="https://fonts.googleapis.com/css2?family=National+Park&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/tutorial.css">
 
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -116,7 +118,39 @@
         </select>
       </div>
       <div id="lista-productos"></div>
+      <div id="paginacion" class="paginacion"></div>
     </section>
+    
+    <section class="tutorial">
+      <a id="btn-paso1" href="javascript:void(0)">
+      <article>
+          <img src="./assets/img/paso1.png" alt="">
+        <p>1. Abre el catalogo, elige y añade los productos al carrito. </p>
+      </article>
+      </a>
+
+      <a href="carrito.html">
+      <article>
+          <img src="./assets/img/paso2.png" alt="">
+        <p>2. Genera la factura y
+              completa el Formulario de envío</p>
+      </article>
+      </a>
+
+      <a href="https://wa.me/573014166510" target="_blank">
+        <article>
+          <img src="./assets/img/paso4.png" alt="">
+          <p>3. Envia tu factura a nuestro Whatsapp
+                Consulta nuestros diferentes metodos de pago</p>
+        </article>
+      </a>
+
+      <article>
+        <img src="./assets/img/paso5.png" alt="">
+        <p>4. Recibe tus productos en casa!</p>
+      </article>
+    
+  </section>
   </main>
 
   <!-- Modal de confirmación -->
