Actualizacion Modo Admin

--- a/carrito.html
+++ b/carrito.html
@@ -47,10 +47,13 @@
   <main class="carrito">
     <h2>Tu Carrito 🛍️</h2>
 
-    <!-- 🔹 LISTA DEL CARRITO -->
-    <section id="lista-carrito"></section>
-    <p id="total"></p>
+  <!-- 🔹 LISTA DEL CARRITO -->
+<section id="lista-carrito"></section>
 
+<!-- 🔹 TOTAL Y DESCUENTO (se actualiza con JS) -->
+<div id="zona-total">
+  <p id="total"></p>
+</div>
     <!-- 🔹 BOTONES -->
     <div class="acciones-carrito">
       <button id="continuar" class="btn-volver">Volver al Catalogo</button>
