--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
     const form = document.getElementById("form-login");
     const errorMsg = document.getElementById("error");
 
-    const USUARIO = "admin";
-    const CLAVE = "12345"; // cámbialo luego o hazlo configurable
+    const USUARIO = "alipro";
+    const CLAVE = "alipro11xd"; // cámbialo luego o hazlo configurable
 
     form.addEventListener("submit", e => {
       e.preventDefault();
