--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login - Dali Cosmetics</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
   <div class="login-container">
