Nuevos productos + Categoria Otros
Actualizacion de productos

--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
         <a class="nav-link" href="#" data-categoria="Skincare">🥰 Skincare</a>
       </li>
 
-      <!-- Accesorios -->
+      <!-- Otros -->
       <li class="nav-item">
-        <a class="nav-link" href="#" data-categoria="Accesorios">🎀 Accesorios</a>
+        <a class="nav-link" href="#" data-categoria="Otros">🎀 Otros</a>
       </li>
+
+
 
     </ul>
   </div>
@@ -137,7 +139,7 @@
       </article>
       </a>
 
-      <a href="https://wa.me/573014166510" target="_blank">
+      <a href="https://wa.me/573106948018" target="_blank">
         <article>
           <img src="./assets/img/paso4.png" alt="">
           <p>3. Envia tu factura a nuestro Whatsapp
