--- a/index.html
+++ b/index.html
@@ -153,6 +153,23 @@
       </article>
     
   </section>
+
+  <section class="kit-banner container my-5 p-4 rounded shadow">
+    <div class="row align-items-center">
+      <div class="col-md-8">
+        <h2 class="fw-bold">💼 Nueva herramienta para emprendedoras</h2>
+        <p class="mt-2">
+          Ingresa tu presupuesto y te sugeriremos un kit de productos al por mayor 
+          (a partir de 2 unidades) para comenzar a vender con la mejor rentabilidad.
+        </p>
+      </div>
+      <div class="col-md-4 text-md-end text-center">
+        <a href="kitcalculator.html" class="btn btn-dark btn-lg">
+          Probar Calculadora →
+        </a>
+      </div>
+    </div>
+  </section>
   </main>
 
   <!-- Modal de confirmación -->
