--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
   <div class="announcement-bar">
     <div class="marquee">
       <span>Todos nuestros productos aplican en UNIDADES</span>
-      <span>Lleva productos con precio MAYORISTA a partir de 2 unidades de la misma referencia</span>
+      <span>Lleva productos con precio MAYORISTA a partir de 2 unidades</span>
       <span>¡Nueva colección disponible!</span>
-      <span>Abre tu cajita con  $5000 en nuestro Live en TikTok</span>
-      <span>Envios a Nivel Nacional</span>
-      <span>¡Nueva colección disponible!</span>
-      <span>Envío gratis en pedidos superiores a $500.000</span>
     </div>
+
   </div>
 
   
@@ -40,6 +37,21 @@
           </a>
         </div>
       </div>
+
+      <div
+      style="
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 25px;
+        background-image: url('./assets/img/lucesheadernavidad.gif');
+        background-repeat: repeat-x;
+        background-position: left top;
+        pointer-events: none;
+        z-index: 10;
+      ">
+    </div>
     </nav>
     
 <!-- ================================
@@ -47,6 +59,8 @@
 ================================ -->
 <nav class="navbar subnav">
   <div class="container-fluid justify-content-center">
+
+    
 
     <!-- 🔹 LINKS SUBNAV -->
     <ul class="navbar-nav d-flex flex-wrap justify-content-center subnav-links">
@@ -83,6 +97,20 @@
         <a class="nav-link" href="#" data-categoria="Otros">🎀 Otros</a>
       </li>
 
+      <div
+  style="
+    position: absolute;
+    left: 0;
+    bottom: -35px;
+    width: 100%;
+    height: 40px;
+    background-image: url('./assets/img/hieloimage1.gif');
+    background-repeat: repeat-x;
+    background-position: left top;
+    pointer-events: none;
+    z-index: 20;
+  ">
+</div>
 
 
     </ul>
