--- a/footer.html
+++ b/footer.html
@@ -49,6 +49,6 @@
   
     <!-- Créditos -->
     <div class="footer-bottom">
-      <p>© Dali Cosmetics 2026. Todos los derechos reservados. | Desarrollado por Daniel Estiven Olaya Barrera</p>
+      <p>© Dali Cosmetics 2026. Todos los derechos reservados. | Desarrollado por <a href="https://www.instagram.com/kapzide/">Daniel Estiven Olaya Barrera</a></p>
     </div>
   </footer>
