--- a/kitcalculator.html
+++ b/kitcalculator.html
@@ -58,7 +58,7 @@
 
     <div class="card shadow p-4">
       <label class="fw-semibold">Tu presupuesto (COP):</label>
-      <input type="number" id="budgetInput" class="form-control" placeholder="Min: 10000">
+      <input type="number" id="budgetInput" class="form-control" placeholder="Min: 10000" value="10000" step="50">
       <button class="btn btn-dark mt-3 w-100" onclick="calculateKit()">Generar mi kit ✨</button>
     </div>
 
