--- a/kitcalculator.html
+++ b/kitcalculator.html
@@ -72,7 +72,7 @@
         <span id="saldoRestante" class="fw-bold text-success">$0</span>
       </div>
     
-      <button class="btn btn-dark mt-3 w-100" onclick="calculateKit()">
+      <button id="btnGenerarKit" class="btn btn-dark mt-3 w-100" onclick="calculateKit()">
         Generar mi kit ✨
       </button>
     
